--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -1,8 +1,7 @@
 {
-    "name": "node_js_basics",
+    "name": "unittests_in_js",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
     "scripts": {
       "lint": "./node_modules/.bin/eslint",
       "check-lint": "lint [0-9]*.js",
